# hyperlight-js

./: .gitattributes  Cargo.toml  Justfile  README.md  SUPPORT.md  typos.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: CargoAudit.yml  CreateRelease.yml  CreateReleaseBranch.yml  IssueLabelChecker.yml  PRLabelChecker.yml  ValidatePullRequests.yml  auto-merge-dependabot.yml  codeql.yml  dep_benchmarks.yml  dep_build.yml  npm-publish.yml
dev/: check-license-headers.sh  check-npm.ps1  check-npm.sh
docs/: create-and-analyse-guest-crashdumps.md  execution-monitors.md  extending-runtime.md  guest-runtime-debugging.md  observability.md  release.md
hack/: rust-dependabot-patch.Dockerfile
src/hyperlight-js/: Cargo.toml  build.rs  clippy.toml
src/hyperlight-js-common/: Cargo.toml
src/hyperlight-js-common/src/: lib.rs
src/hyperlight-js-runtime/: Cargo.toml  build.rs
src/hyperlight-js-runtime/include/: stdio.h  time.h  unistd.h
src/hyperlight-js-runtime/src/: host.rs  host_fn.rs  lib.rs  libc.rs  main.rs  utils.rs
src/hyperlight-js-runtime/src/globals/: console.rs  mod.rs  print.rs  require.rs  string.rs
src/hyperlight-js-runtime/src/guest/: mod.rs
src/hyperlight-js-runtime/src/guest/stubs/: clock.rs  mod.rs  srand.rs
src/hyperlight-js-runtime/src/main/: hyperlight.rs  native.rs
src/hyperlight-js-runtime/src/main/stubs/: io.rs  localtime.rs
src/hyperlight-js-runtime/src/modules/: console.rs  crypto.rs  io.rs  mod.rs  require.rs
src/hyperlight-js-runtime/stubs/: clock.c  localtime.c
src/hyperlight-js-runtime/stubs/include/: stdio.h  time.h
src/hyperlight-js-runtime/tests/: native_cli.rs  native_modules.rs
src/hyperlight-js-runtime/tests/fixtures/extended_runtime/: Cargo.toml
src/hyperlight-js-runtime/tests/fixtures/extended_runtime/src/: main.rs
src/hyperlight-js-runtime/tests/fixtures/native_math/: Cargo.toml
src/hyperlight-js-runtime/tests/fixtures/native_math/src/: lib.rs
src/hyperlight-js/benches/: benchmarks.rs
src/hyperlight-js/examples/data/echo/: handler.js
src/hyperlight-js/examples/data/fibonacci/: data.json  handler.js
src/hyperlight-js/examples/data/regex/: data.json  handler.js
src/hyperlight-js/examples/execution_stats/: main.rs
src/hyperlight-js/examples/interrupt/: main.rs
src/hyperlight-js/examples/metrics/: main.rs
src/hyperlight-js/examples/run_handler/: README.md  main.rs
src/hyperlight-js/examples/runtime_debugging/: main.rs
src/hyperlight-js/examples/tracing/: main.rs
src/hyperlight-js/examples/tracing-otlp/: main.rs
src/hyperlight-js/examples/user_modules/: main.rs
src/hyperlight-js/src/: lib.rs  resolver.rs  script.rs
src/hyperlight-js/src/sandbox/: execution_stats.rs  host_fn.rs  js_sandbox.rs  loaded_js_sandbox.rs  metrics.rs  mod.rs  proto_js_sandbox.rs  sandbox_builder.rs
src/hyperlight-js/src/sandbox/monitor/: cpu_time.rs  mod.rs  runtime.rs  wall_clock.rs
src/hyperlight-js/tests/: builtin_crypto.rs  builtin_globals.rs  builtin_modules.rs  execution_stats.rs  handlers.rs  host_functions.rs  module_loader.rs  monitors.rs  native_modules.rs  printing.rs  runtime.rs  termination.rs  user_modules.rs
src/hyperlight-js/tests/fixtures/: hitchhiker.js  strings.js
src/hyperlight-js/tests/fixtures/galaxy/: deepThought.js  index.js
src/js-host-api/: .gitignore  .npmignore  .prettierrc  Cargo.toml  README.md  TYPE_NAMING.md  build.rs  eslint.config.mjs  lib.d.ts  lib.js  package-lock.json  package.json  test-examples.sh  vitest.config.js
src/js-host-api/examples/: README.md  calculator.js  cpu-timeout.js  host-functions.js  interrupt.js  simple.js  unload.js  user-modules.js
src/js-host-api/examples/mcp-server/: README.md  demo-copilot-cli.ps1  demo-copilot-cli.sh  package-lock.json  package.json  server.js  vitest.config.js
src/js-host-api/examples/mcp-server/tests/: config.test.js  mcp-server.test.js  prompt-examples.test.js  timing.test.js
src/js-host-api/npm/linux-x64-gnu/: package.json
src/js-host-api/npm/win32-x64-msvc/: package.json
src/js-host-api/src/: lib.rs
src/js-host-api/tests/: host-functions.test.js  sandbox.test.js  test-helpers.js  timeout.test.js  user-modules.test.js
