[package]
name = "js-host-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arc-swap = "1"
hyperlight-js = { workspace = true, features = ["monitor-wall-clock", "monitor-cpu-time", "guest-call-stats"] }
napi = { version = "3.8", features = ["tokio_rt", "serde-json"] }
napi-derive = "3.5"
serde_json = "1"
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
napi-build = "2.3"
